--- a/notebooks/QualiPhase-StationTiming.ipynb
+++ b/notebooks/QualiPhase-StationTiming.ipynb
@@ -53,7 +53,7 @@
    },
    "source": [
     "from IPython.display import Markdown, display\n",
-    "from src.generate_plan import schedule_tournament\n",
+    "from src.generate_plan(experimentel) import schedule_tournament\n",
     "\n",
     "# Anzahl Teilnehmer\n",
     "n = 50\n",
