--- a/notebooks/QualiPhase-StationTiming.ipynb
+++ b/notebooks/QualiPhase-StationTiming.ipynb
@@ -21,8 +21,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-06T15:47:17.252436Z",
-     "start_time": "2025-05-06T15:47:17.249968Z"
+     "end_time": "2025-05-07T10:02:41.977187Z",
+     "start_time": "2025-05-07T10:02:41.974820Z"
     }
    },
    "cell_type": "code",
@@ -36,33 +36,33 @@
     "d = 6\n",
     "\n",
     "# break duration (in min)\n",
-    "b = 2"
+    "b = 4"
    ],
    "id": "cad05930a98613cc",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "id": "90ed96fb-38f0-4c83-9b0e-2bd35aca9469",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-06T15:47:17.267504Z",
-     "start_time": "2025-05-06T15:47:17.264391Z"
+     "end_time": "2025-05-07T10:02:41.996559Z",
+     "start_time": "2025-05-07T10:02:41.991289Z"
     }
    },
    "source": [
     "from IPython.display import Markdown, display\n",
-    "from src.generate_plan import schedule_tournament\n",
+    "from src.generate_plan_experimental import schedule_tournament\n",
     "\n",
     "# Anzahl Teilnehmer\n",
     "n = 50\n",
     "\n",
     "# Anzahl Stationen\n",
-    "s = 7\n",
+    "s = 8\n",
     "\n",
     "# Anzahl Runden\n",
-    "r = 3\n",
+    "r = 2\n",
     "\n",
     "# Startzeit\n",
     "t = \"20:20\"\n",
@@ -81,7 +81,7 @@
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ],
-      "text/markdown": "### Qualification Phase\n- **Start:** 20:20\n- **Estimated End:** 21:22\n\n| Match Start | Match End | Round | Station | Players |\n|-------------|-----------|-------|---------|---------|\n| 20:20 | 20:26 | 1 | 1 | 8, 49, 39, 7 |\n| 20:22 | 20:28 | 1 | 2 | 48, 50, 24, 22 |\n| 20:24 | 20:30 | 1 | 3 | 2, 31, 12, 30 |\n| 20:26 | 20:32 | 1 | 4 | 18, 42, 43, 37 |\n| 20:28 | 20:34 | 1 | 1 | 10, 17, 45, 13 |\n| 20:28 | 20:34 | 1 | 5 | 38, 41, 47, 15 |\n| 20:30 | 20:36 | 1 | 2 | 44, 19, 33, 26 |\n| 20:30 | 20:36 | 1 | 6 | 27, 29, 5, 9 |\n| 20:32 | 20:38 | 1 | 3 | 3, 40, 25, 46 |\n| 20:32 | 20:38 | 1 | 7 | 1, 20, 28, 23 |\n| 20:34 | 20:40 | 1 | 4 | 21, 35, 14, 4 |\n| 20:36 | 20:42 | 1 | 1 | 32, 36, 11, 6 |\n| 20:36 | 20:42 | 1 | 5 | 34, 16 |\n| 20:44 | 20:50 | 2 | 1 | 3, 22, 31, 41 |\n| 20:44 | 20:50 | 2 | 2 | 34, 9, 24, 43 |\n| 20:46 | 20:52 | 2 | 3 | 47, 35, 10, 42 |\n| 20:46 | 20:52 | 2 | 4 | 39, 27, 8, 25 |\n| 20:48 | 20:54 | 2 | 5 | 5, 21, 49, 11 |\n| 20:48 | 20:54 | 2 | 6 | 38, 6, 50, 29 |\n| 20:50 | 20:56 | 2 | 7 | 23, 37, 20, 36 |\n| 20:52 | 20:58 | 2 | 1 | 28, 40, 17, 46 |\n| 20:52 | 20:58 | 2 | 2 | 44, 45, 14, 1 |\n| 20:54 | 21:00 | 2 | 3 | 48, 12, 26, 19 |\n| 20:54 | 21:00 | 2 | 4 | 13, 15, 32, 4 |\n| 20:56 | 21:02 | 2 | 5 | 16, 18, 2, 7 |\n| 20:56 | 21:02 | 2 | 6 | 30, 33 |\n| 21:04 | 21:10 | 3 | 1 | 7, 50, 45, 14 |\n| 21:04 | 21:10 | 3 | 2 | 26, 28, 42, 5 |\n| 21:06 | 21:12 | 3 | 3 | 30, 25, 22, 19 |\n| 21:06 | 21:12 | 3 | 4 | 34, 48, 12, 8 |\n| 21:08 | 21:14 | 3 | 5 | 20, 35, 13, 1 |\n| 21:08 | 21:14 | 3 | 6 | 33, 16, 11, 9 |\n| 21:10 | 21:16 | 3 | 7 | 39, 49, 6, 36 |\n| 21:12 | 21:18 | 3 | 1 | 38, 21, 10, 15 |\n| 21:12 | 21:18 | 3 | 2 | 24, 40, 18, 37 |\n| 21:14 | 21:20 | 3 | 3 | 32, 27, 43, 31 |\n| 21:14 | 21:20 | 3 | 4 | 41, 29, 23, 17 |\n| 21:16 | 21:22 | 3 | 5 | 46, 3, 2, 4 |\n| 21:16 | 21:22 | 3 | 6 | 44, 47 |"
+      "text/markdown": "### Qualification Phase\n- **Start:** 20:20\n- **Estimated End:** 21:24\n\n| Match Start | Match End | Round | Station | Players |\n|-------------|-----------|-------|---------|---------|\n| 20:20 | 20:26 | 1 | 1 | 41, 35, 48, 23 |\n| 20:20 | 20:26 | 1 | 2 | 37, 26, 18, 9 |\n| 20:24 | 20:30 | 1 | 3 | 29, 15, 8, 20 |\n| 20:24 | 20:30 | 1 | 4 | 21, 6, 2, 3 |\n| 20:28 | 20:34 | 1 | 5 | 47, 27, 12, 42 |\n| 20:28 | 20:34 | 1 | 6 | 17, 24, 10, 11 |\n| 20:32 | 20:38 | 1 | 1 | 28, 1, 45, 19 |\n| 20:32 | 20:38 | 1 | 2 | 31, 32, 34, 16 |\n| 20:36 | 20:42 | 1 | 3 | 40, 14, 49, 4 |\n| 20:36 | 20:42 | 1 | 4 | 38, 25, 43, 36 |\n| 20:40 | 20:46 | 1 | 5 | 46, 50, 13, 39 |\n| 20:40 | 20:46 | 1 | 6 | 33, 30, 44, 22 |\n| 20:44 | 20:50 | 1 | 1 | 7, 5 |\n| 20:54 | 21:00 | 2 | 1 | 49, 14, 43, 2 |\n| 20:54 | 21:00 | 2 | 2 | 40, 42, 50, 22 |\n| 20:58 | 21:04 | 2 | 3 | 20, 47, 27, 31 |\n| 20:58 | 21:04 | 2 | 4 | 34, 5, 25, 24 |\n| 21:02 | 21:08 | 2 | 5 | 48, 46, 17, 13 |\n| 21:02 | 21:08 | 2 | 6 | 39, 4, 7, 26 |\n| 21:06 | 21:12 | 2 | 1 | 33, 41, 44, 18 |\n| 21:06 | 21:12 | 2 | 2 | 3, 28, 10, 12 |\n| 21:10 | 21:16 | 2 | 3 | 37, 15, 29, 21 |\n| 21:10 | 21:16 | 2 | 4 | 35, 16, 19, 23 |\n| 21:14 | 21:20 | 2 | 5 | 6, 11, 36, 1 |\n| 21:14 | 21:20 | 2 | 6 | 9, 45, 32, 38 |\n| 21:18 | 21:24 | 2 | 1 | 8, 30 |"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -92,59 +92,46 @@
      "text": [
       "### Qualification Phase\n",
       "- **Start:** 20:20\n",
-      "- **Estimated End:** 21:22\n",
+      "- **Estimated End:** 21:24\n",
       "\n",
       "| Match Start | Match End | Round | Station | Players |\n",
       "|-------------|-----------|-------|---------|---------|\n",
-      "| 20:20 | 20:26 | 1 | 1 | 8, 49, 39, 7 |\n",
-      "| 20:22 | 20:28 | 1 | 2 | 48, 50, 24, 22 |\n",
-      "| 20:24 | 20:30 | 1 | 3 | 2, 31, 12, 30 |\n",
-      "| 20:26 | 20:32 | 1 | 4 | 18, 42, 43, 37 |\n",
-      "| 20:28 | 20:34 | 1 | 1 | 10, 17, 45, 13 |\n",
-      "| 20:28 | 20:34 | 1 | 5 | 38, 41, 47, 15 |\n",
-      "| 20:30 | 20:36 | 1 | 2 | 44, 19, 33, 26 |\n",
-      "| 20:30 | 20:36 | 1 | 6 | 27, 29, 5, 9 |\n",
-      "| 20:32 | 20:38 | 1 | 3 | 3, 40, 25, 46 |\n",
-      "| 20:32 | 20:38 | 1 | 7 | 1, 20, 28, 23 |\n",
-      "| 20:34 | 20:40 | 1 | 4 | 21, 35, 14, 4 |\n",
-      "| 20:36 | 20:42 | 1 | 1 | 32, 36, 11, 6 |\n",
-      "| 20:36 | 20:42 | 1 | 5 | 34, 16 |\n",
-      "| 20:44 | 20:50 | 2 | 1 | 3, 22, 31, 41 |\n",
-      "| 20:44 | 20:50 | 2 | 2 | 34, 9, 24, 43 |\n",
-      "| 20:46 | 20:52 | 2 | 3 | 47, 35, 10, 42 |\n",
-      "| 20:46 | 20:52 | 2 | 4 | 39, 27, 8, 25 |\n",
-      "| 20:48 | 20:54 | 2 | 5 | 5, 21, 49, 11 |\n",
-      "| 20:48 | 20:54 | 2 | 6 | 38, 6, 50, 29 |\n",
-      "| 20:50 | 20:56 | 2 | 7 | 23, 37, 20, 36 |\n",
-      "| 20:52 | 20:58 | 2 | 1 | 28, 40, 17, 46 |\n",
-      "| 20:52 | 20:58 | 2 | 2 | 44, 45, 14, 1 |\n",
-      "| 20:54 | 21:00 | 2 | 3 | 48, 12, 26, 19 |\n",
-      "| 20:54 | 21:00 | 2 | 4 | 13, 15, 32, 4 |\n",
-      "| 20:56 | 21:02 | 2 | 5 | 16, 18, 2, 7 |\n",
-      "| 20:56 | 21:02 | 2 | 6 | 30, 33 |\n",
-      "| 21:04 | 21:10 | 3 | 1 | 7, 50, 45, 14 |\n",
-      "| 21:04 | 21:10 | 3 | 2 | 26, 28, 42, 5 |\n",
-      "| 21:06 | 21:12 | 3 | 3 | 30, 25, 22, 19 |\n",
-      "| 21:06 | 21:12 | 3 | 4 | 34, 48, 12, 8 |\n",
-      "| 21:08 | 21:14 | 3 | 5 | 20, 35, 13, 1 |\n",
-      "| 21:08 | 21:14 | 3 | 6 | 33, 16, 11, 9 |\n",
-      "| 21:10 | 21:16 | 3 | 7 | 39, 49, 6, 36 |\n",
-      "| 21:12 | 21:18 | 3 | 1 | 38, 21, 10, 15 |\n",
-      "| 21:12 | 21:18 | 3 | 2 | 24, 40, 18, 37 |\n",
-      "| 21:14 | 21:20 | 3 | 3 | 32, 27, 43, 31 |\n",
-      "| 21:14 | 21:20 | 3 | 4 | 41, 29, 23, 17 |\n",
-      "| 21:16 | 21:22 | 3 | 5 | 46, 3, 2, 4 |\n",
-      "| 21:16 | 21:22 | 3 | 6 | 44, 47 |\n"
+      "| 20:20 | 20:26 | 1 | 1 | 41, 35, 48, 23 |\n",
+      "| 20:20 | 20:26 | 1 | 2 | 37, 26, 18, 9 |\n",
+      "| 20:24 | 20:30 | 1 | 3 | 29, 15, 8, 20 |\n",
+      "| 20:24 | 20:30 | 1 | 4 | 21, 6, 2, 3 |\n",
+      "| 20:28 | 20:34 | 1 | 5 | 47, 27, 12, 42 |\n",
+      "| 20:28 | 20:34 | 1 | 6 | 17, 24, 10, 11 |\n",
+      "| 20:32 | 20:38 | 1 | 1 | 28, 1, 45, 19 |\n",
+      "| 20:32 | 20:38 | 1 | 2 | 31, 32, 34, 16 |\n",
+      "| 20:36 | 20:42 | 1 | 3 | 40, 14, 49, 4 |\n",
+      "| 20:36 | 20:42 | 1 | 4 | 38, 25, 43, 36 |\n",
+      "| 20:40 | 20:46 | 1 | 5 | 46, 50, 13, 39 |\n",
+      "| 20:40 | 20:46 | 1 | 6 | 33, 30, 44, 22 |\n",
+      "| 20:44 | 20:50 | 1 | 1 | 7, 5 |\n",
+      "| 20:54 | 21:00 | 2 | 1 | 49, 14, 43, 2 |\n",
+      "| 20:54 | 21:00 | 2 | 2 | 40, 42, 50, 22 |\n",
+      "| 20:58 | 21:04 | 2 | 3 | 20, 47, 27, 31 |\n",
+      "| 20:58 | 21:04 | 2 | 4 | 34, 5, 25, 24 |\n",
+      "| 21:02 | 21:08 | 2 | 5 | 48, 46, 17, 13 |\n",
+      "| 21:02 | 21:08 | 2 | 6 | 39, 4, 7, 26 |\n",
+      "| 21:06 | 21:12 | 2 | 1 | 33, 41, 44, 18 |\n",
+      "| 21:06 | 21:12 | 2 | 2 | 3, 28, 10, 12 |\n",
+      "| 21:10 | 21:16 | 2 | 3 | 37, 15, 29, 21 |\n",
+      "| 21:10 | 21:16 | 2 | 4 | 35, 16, 19, 23 |\n",
+      "| 21:14 | 21:20 | 2 | 5 | 6, 11, 36, 1 |\n",
+      "| 21:14 | 21:20 | 2 | 6 | 9, 45, 32, 38 |\n",
+      "| 21:18 | 21:24 | 2 | 1 | 8, 30 |\n"
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-06T15:47:17.278242Z",
-     "start_time": "2025-05-06T15:47:17.276625Z"
+     "end_time": "2025-05-07T10:02:42.053254Z",
+     "start_time": "2025-05-07T10:02:42.052144Z"
     }
    },
    "cell_type": "code",
